# news-mcp

./: README.md  n8n.md  package.json  pyproject.toml  setup.py
news_mcp/fakenews/: pyproject.toml
src/mcp_fakenews/: fakenews_detect.py
