[project]
name = "mcp-fakenews"
version = "0.1.0"
description = "fake news detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "uvicorn",
]



[project.scripts]
mcp-fakenews = "mcp_fakenews.fakenews_detect:mcp.run"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 